--- a/project.config.json
+++ b/project.config.json
@@ -6,31 +6,40 @@
   },
   "setting": {
     "urlCheck": true,
-    "scopeDataCheck": false,
-    "coverView": true,
     "es6": true,
+    "enhance": false,
     "postcss": true,
-    "compileHotReLoad": false,
     "preloadBackgroundData": false,
     "minified": true,
-    "autoAudits": false,
     "newFeature": false,
-    "uglifyFileName": false,
-    "uploadWithSourceMap": true,
-    "useIsolateContext": true,
+    "coverView": true,
     "nodeModules": false,
-    "enhance": false,
-    "useCompilerModule": true,
-    "userConfirmedUseCompilerModuleSwitch": false,
+    "autoAudits": false,
+    "showShadowRootInWxmlPanel": true,
+    "scopeDataCheck": false,
+    "uglifyFileName": false,
+    "checkInvalidKey": true,
+    "checkSiteMap": true,
+    "uploadWithSourceMap": true,
+    "compileHotReLoad": false,
     "useMultiFrameRuntime": false,
     "useApiHook": true,
-    "showShadowRootInWxmlPanel": true,
+    "babelSetting": {
+      "ignore": [],
+      "disablePlugins": [],
+      "outputPath": ""
+    },
+    "enableEngineNative": false,
+    "bundle": false,
+    "useIsolateContext": true,
+    "useCompilerModule": true,
+    "userConfirmedUseCompilerModuleSwitch": false,
     "packNpmManually": false,
     "packNpmRelationList": [],
     "minifyWXSS": true
   },
   "compileType": "miniprogram",
-  "libVersion": "2.13.1",
+  "libVersion": "2.13.2",
   "appid": "wxf96c2f63ce4f0497",
   "projectname": "%E9%A1%BA%E5%93%92%E6%A0%A1%E5%9B%AD",
   "debugOptions": {
@@ -53,8 +62,8 @@
     "miniprogram": {
       "list": [
         {
-          "name": "pages/driverPage/driverPage",
-          "pathName": "pages/driverPage/driverPage",
+          "name": "pages/map/map",
+          "pathName": "pages/map/map",
           "query": "",
           "scene": null
         },
@@ -83,8 +92,8 @@
           "scene": null
         },
         {
-          "name": "pages/indexs/indexs",
-          "pathName": "pages/mymessage/mymessage",
+          "name": "pages/myway/myway",
+          "pathName": "pages/myway/myway",
           "query": "",
           "scene": null
         },
@@ -109,6 +118,30 @@
         {
           "name": "pages/payment/payment",
           "pathName": "pages/payment/payment",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/personal/personal",
+          "pathName": "pages/personal/personal",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/indexs/indexs",
+          "pathName": "pages/indexs/indexs",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/confession/confession",
+          "pathName": "pages/confession/confession",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/sign/sign",
+          "pathName": "pages/sign/sign",
           "scene": null
         }
       ]
